fix: Fix vm update
